ABP simulations, getbestTurn() random factor
- getBestTurn() now choose a random moves when facing equally valued moves
- run simulations ABP vs ABP, outcomes if white player has a very small chance, proportion is usually Black 65%/Draw 30 % / White 5%
- fixed GameState and GameLogic using linked list methods instead of array list,