@@ -91,7 +91,7 @@ public class AgentMCTS implements Agent {
             if (currentTurn.isEmpty()) {
                 currentTurn = bestChild.turn;
             }
-            Move move = currentTurn.getMoves().removeFirst();
+            Move move = currentTurn.getMoves().remove(0);
             PauseTransition pause = new PauseTransition(Duration.seconds(Agent.delay));
             pause.setOnFinished(event -> {
             if (gameState.getIsWhiteTurn() == isWhite && !gameState.isGameOver()) {
@@ -219,8 +219,11 @@ public class AgentMCTS implements Agent {
                 currentTurn = bestChild.turn;
             }
             while (!currentTurn.isEmpty() && gameState.getWinner() == 0) {
-                gameState.move(currentTurn.getMoves().removeFirst());
-            } 
+                List<Move> moves = currentTurn.getMoves();
+                if (!moves.isEmpty()) {
+                    gameState.move(moves.remove(0));
+                }
+            }
         }
     }
 
